# matplotlib-wezterm

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  ruff.toml
.pre-commit/: cspell_dict.txt
matplotlib-wezterm/: __init__.py
matplotlib_wezterm/: __init__.py
